# simple-chat

./: Cargo.toml
src/: camera.rs  main.rs
static/: index.html
static/js/: webrtc.js
