[package]
name = "webrtc-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
opencv = "0.93.1"
base64 = "0.21"
tokio-stream = "0.1"
webrtc = "0.9"
bytes = "1.0"